--- a/sites/all/themes/cci/sass/_front.scss
+++ b/sites/all/themes/cci/sass/_front.scss
@@ -10,6 +10,7 @@
         height: 800px;
         background: url(../images/bg-home.jpg) no-repeat center center;
         background-size: cover;
+        position: relative;
         
         .content
         {
@@ -61,13 +62,14 @@
     .home-arrow-down
     {
         position: absolute;
-        bottom: 25px;
         left: 50%;
         width: 60px;
         height: 30px;
         margin-left: -30px;
+        margin-top: -55px;
         background: url(../images/home-arrow-down.svg) no-repeat center center;
         cursor: pointer;
+        z-index: 1;
     }
     
     .home-about-us
