--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -62,20 +62,9 @@
         right: 0;
         height:220px;
         
-        &.views-row-last
+        &.views-row-last .views-field-body
         {
-            -webkit-column-count: 2;
-            column-count: 2;
-            -webkit-column-gap: 25px;
-            column-gap: 25px;
-            
-            .views-field-body
-            {
-                max-width: none;
-                font-size: 1.2em;
-                font-weight: 400;
-                padding-top: 0;
-            }
+            padding-top: 0;
         }
     }
     .views-field-title
