--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -358,28 +358,22 @@ body.navbar-administration.navbar-horizontal.navbar-tray-open
     }
 }
 
-body.culture,
-body.work,
-body.services,
-body.good-times,
-body.contact,
-body.start-a-project
+#page-title
 {
-    #page-title
-    {
-        color:white;
-        text-transform:uppercase;
-        font-weight:bold;
-        font-size:3.7em;
-        text-align:center;
-        line-height:350px;
-        height: 350px;
-        position: relative;
-        margin-top:0;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-    }
+    color:white;
+    text-transform:uppercase;
+    font-weight:bold;
+    font-size:3.7em;
+    text-align:center;
+    height: 350px;
+    line-height: 1;
+    position: relative;
+    margin-top:0;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-image: url(../images/title-basic.jpg);
+    vertical-align: middle;
 }
 body.culture #page-title
 {
@@ -393,124 +387,30 @@ body.services #page-title
 {
     background-image:url(../images/title-services.jpg);
 }
-body.good-times #page-title
+#page-title .live-project
 {
-    background-image:url(../images/title-good-times.jpg);
-}
-body.contact #page-title
-{
-    background-image:url(../images/title-contact.jpg);
-}
-h2.history,
-h2.team,
-h2.community,
-h2.samples,
-h2.clients,
-h2.nice-things,
-h2.why,
-h2.what,
-h2.how
-{
-    color:white;
-    text-transform:uppercase;
-    font-weight:300;
-    font-size:3.7em;
-    text-align:center;
-    position: relative;
-    line-height:300px;
-    clear: both;
-
-    &:before
+    display: block;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 3px solid white;
+    height: 45px;
+    line-height: 45px;
+    width: 194px;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    margin: 25px auto 0 auto;
+    
+    &:hover
     {
-        content:"";
-        display: block;
-        height:300px;
-        width: 1220px;
-        position: absolute;
-        top:0;
-        left:50%;
-        margin-left:-610px;
-        background-repeat:no-repeat;
-        background-position:center top;
-        z-index: -1;
-    }
-
-    .icon
-    {
-        vertical-align: middle;
-        margin-top: -20px;
-        margin-right: 18px;
+        background: $green;
     }
 }
-h2.history:before
-{
-    background-image:url(../images/title-history.jpg);
-}
-h2.team:before
-{
-    background-image:url(../images/title-team.jpg);
-}
-h2.community:before
-{
-    background-image:url(../images/title-community.jpg);
-}
-h2.samples:before
-{
-    background-image:url(../images/title-samples.jpg);
-}
-h2.clients:before
-{
-    background-image:url(../images/title-clients.jpg);
-}
-h2.nice-things:before
-{
-    background-image:url(../images/title-nice-things.jpg);
-}
-h2.why:before
-{
-    background-image:url(../images/title-why.jpg);
-}
-h2.what:before
-{
-    background-image:url(../images/title-what.jpg);
-}
-h2.how:before
-{
-    background-image:url(../images/title-how.jpg);
-}
 
-#devices
-{
-    margin:-184px auto 0 auto;
-    display: block;
-}
-
-#skip-link .element-invisible.element-focusable:active,
-#skip-link .element-invisible.element-focusable:focus
-{
-    margin-top:55px;
-    margin-bottom:-55px;
-    display: block;
-}
-
-#history-content
-{
-    margin-top: 60px;
-    margin-bottom: 30px;
-    @include columns;
-}
-#work-intro
-{
-    margin-top:40px;
-    @include columns;
-}
 .columns
 {
     @include columns;
-}
-h2.samples
-{
-    margin-top:50px;
 }
 
 ul.tabs.primary
@@ -546,77 +446,6 @@ div.messages
     padding-left: calc(50% - 310px);
     background-position:130px center;
     background-position: calc(50% - 340px) center;
-}
-
-#map
-{
-    width:100%;
-    height:370px;
-    border:0;
-    border-top:10px solid $green;
-    border-bottom:10px solid $green;
-    display: block;
-    margin-top: 40px;
-}
-#contact-info
-{
-    margin:40px auto 60px auto;
-    font-size:1.75em;
-    line-height:100%;
-    font-weight: bold;
-    width:100%;
-    max-width:760px;
-    position: relative;
-    left: 60px;
-    overflow: hidden;
-
-    & > div
-    {
-        float: left;
-        width:50%;
-        background-repeat:no-repeat;
-        background-position:left center;
-        margin-bottom:10px;
-
-        & > div
-        {
-            padding:16px 0 16px 60px;
-        }
-
-        a
-        {
-            display: block;
-            text-decoration:none;
-
-            &:hover
-            {
-                text-decoration:none;
-            }
-        }
-
-        &.location
-        {
-            background-image: url(../images/location-large.png);
-
-            & > div
-            {
-                padding-top:0;
-                padding-bottom:0;
-            }
-        }
-        &.phone
-        {
-            background-image: url(../images/phone-large.png);
-        }
-        &.email
-        {
-            background-image: url(../images/email-large.png);
-        }
-        &.twitter
-        {
-            background-image: url(../images/tw2-large.png);
-        }
-    }
 }
 
 body.start-a-project
@@ -1206,7 +1035,7 @@ body.services .block.home-what-we-do
     }
 }
 
-body.work
+body.work.node-type-page
 {
     #block-system-main
     {
