--- a/sites/all/themes/cci/sass/_responsive-768.scss
+++ b/sites/all/themes/cci/sass/_responsive-768.scss
@@ -46,3 +46,81 @@
         margin-right: 0;
     }
 }
+
+.block.spotify
+{
+    .content
+    {
+        text-align: center;
+    }
+    .left
+    {
+        float: none;
+        margin: 0 auto;
+    }
+    .top3,
+    .player
+    {
+        float: none;
+        display: inline-block;
+        vertical-align: top;
+        text-align: left;
+    }
+}
+
+.view-project
+{
+    padding: 10px 0;
+    
+    .views-field-field-text-section-1
+    {
+        width: auto;
+        float: none;
+        
+        & > div
+        {
+            padding: 20px;
+        }
+    }
+    .views-field-field-image-section-1
+    {
+        width: auto;
+        float: none;
+        max-width: 400px;
+        margin: 0 auto;
+        
+        img
+        {
+            width: 100%;
+            height: auto;
+        }
+    }
+    .views-field-field-image-section-2
+    {
+        width: auto;
+        float: none;
+        max-width: 400px;
+        margin: 0 auto;
+        
+        img
+        {
+            width: 100%;
+            height: auto;
+        }
+        
+        & > div
+        {
+            float: none;
+        }
+    }
+    .views-field-field-text-section-2
+    {
+        width: auto;
+        float: none;
+        
+        & > div
+        {
+            padding: 20px;
+        }
+    }
+}
