--- a/sites/all/themes/cci/sass/_responsive-860.scss
+++ b/sites/all/themes/cci/sass/_responsive-860.scss
@@ -19,3 +19,34 @@
         font-size: 1.8em;
     }
 }
+
+.block.instagram
+{
+    .left
+    {
+        float: none;
+        margin: 0 auto;
+    }
+    .feed
+    {
+        text-align: center;
+    }
+}
+
+.block.twitter
+{
+    .left
+    {
+        float: none;
+        margin: 0 auto;
+    }
+    .feed
+    {
+        text-align: center;
+        
+        .tweet
+        {
+            text-align: left;
+        }
+    }
+}
