--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -31,7 +31,7 @@
    .marker
    {
        position: absolute;
-       bottom: 0;
+       top: 100%;
        left: 50%;
        width:150px;
        margin-left: -75px;
