--- a/sites/all/themes/cci/sass/_responsive-640.scss
+++ b/sites/all/themes/cci/sass/_responsive-640.scss
@@ -1,4 +1,4 @@
-.front .home-what-we-do .content li
+#main-wrapper .block.home-what-we-do .content li,
 {
     width: 120px;
 }
@@ -14,4 +14,64 @@
     {
         margin-right: 0;
     }
+}
+
+.block.instagram
+{
+    .feed
+    {
+        max-width: 360px;
+        margin: 0 auto;
+    }
+}
+
+.block.twitter
+{
+    .feed
+    {
+        max-width: 280px;
+        margin: 0 auto;
+        
+        .tweet
+        {
+            width: 320px;
+            margin-bottom: 1.25em;
+            
+            &:last-child
+            {
+                margin-bottom: 0;
+            }
+            
+            .text
+            {
+                height: auto;
+            }
+        }
+    }
+}
+
+.block.spotify
+{
+    .top3,
+    .player
+    {
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .top3
+    {
+        margin-bottom: 1em;
+    }
+}
+
+.view-culture-information-headings .view-content ul li
+{
+    margin: 0 10px;
+}
+
+.block.services-how-we-do-it .step
+{
+    padding-right: 0;
+    margin-bottom: 30px;
 }
