--- a/sites/all/themes/cci/sass/_responsive-940.scss
+++ b/sites/all/themes/cci/sass/_responsive-940.scss
@@ -1,4 +1,5 @@
-.front .block.home-how-we-do-it .content
+.front .block.home-how-we-do-it .content,
+body.services .block.home-what-we-do .content
 {
     .step
     {
@@ -17,6 +18,44 @@
 #page-wrapper
 {
     padding-bottom: 0 !important;
+}
+
+.block.instagram
+{
+    .left
+    {
+        margin-left: 0;
+        margin-right: 20px;
+    }
+    .feed img
+    {
+        margin: 0 3px;
+    }
+}
+.block.twitter
+{
+    .left
+    {
+        margin-left: 0;
+        margin-right: 20px;
+    }
+    .feed .tweet
+    {
+        margin-right: 15px;
+        
+        &:last-child
+        {
+            margin-right: 0;
+        }
+    }
+}
+.block.spotify
+{
+    .left
+    {
+        margin-left: 0;
+        margin-right: 20px;
+    }
 }
 
 .view-team .thumb-detail > div
