Finished team styles and responsive tweaks

--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -89,6 +89,7 @@ body.menu-green
         padding-top: 12px;
         padding-left: 40px;
         float: left;
+        position: relative;
         z-index: 101;
         transition: all 0.4s;
         
