--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -259,7 +259,7 @@
             right: 0;
             width: 25px;
             height: 25px;
-            background: url(../images/btn-close.png) no-repeat;
+            background: url(../images/icon-close.svg) no-repeat;
         }
         
         .name
@@ -273,6 +273,34 @@
         {
             font-weight: bold;
             font-size: 1em;
+            height: auto;
+            padding-bottom: 0.5em;
+        }
+        .social a
+        {
+            display: inline-block;
+            font-size: 0;
+            height: 25px;
+            width: 25px;
+            vertical-align: top;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            background-repeat: no-repeat;
+            background-position: left center;
+            text-decoration: none;
+            
+            &.fb
+            {
+                background-image: url(../images/icon-menu-fb.svg);
+            }
+            &.tw
+            {
+                background-image: url(../images/icon-menu-tw.svg);
+            }
+            &.in
+            {
+                background-image: url(../images/icon-linkedin.svg);
+            }
         }
         .body
         {
@@ -291,6 +319,7 @@
     background: #555555;
     color: white;
     text-align: center;
+    clear: both;
     
     h2
     {
