--- a/sites/all/themes/cci/sass/_responsive-360.scss
+++ b/sites/all/themes/cci/sass/_responsive-360.scss
@@ -1,3 +1,19 @@
+input[type=text],
+input[type=email],
+input[type=password],
+input[type=number],
+input[type=date],
+select,
+#page-wrapper textarea
+{
+    width: 100%;
+    box-sizing: border-box;
+}
+#webform-client-form-112 #webform-component-project-budget input
+{
+    width: 100%;
+}
+
 .front .block.home-how-we-do-it .content
 {
     padding-left: 20px;
