--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -486,17 +486,15 @@ body.start-a-project
             }
         }
     }
+    
+    #page-title
+    {
+        background-image: none;
+    }
 
     #block-system-main
     {
         background: white;
-        padding: 30px 0;
-        
-        & > div
-        {
-            max-width: 650px;
-            margin: 0 auto;
-        }
     }
 }
 
@@ -1057,6 +1055,21 @@ body.work.node-type-page
         p
         {
             font-size: 1.1em;
+        }
+    }
+}
+
+body.node-type-page,
+body.node-type-webform
+{
+    #block-system-main
+    {
+        max-width: 980px;
+        margin: 0 auto;
+        
+        & > div
+        {
+            padding: 30px 20px;
         }
     }
 }
