--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -1060,7 +1060,8 @@ body.work.node-type-page
 }
 
 body.node-type-page,
-body.node-type-webform
+body.node-type-webform,
+body.page-node-done
 {
     #block-system-main
     {
