Fix bg color on start a project page

--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -492,7 +492,7 @@ body.start-a-project
         background-image: none;
     }
 
-    #block-system-main
+    .region-content
     {
         background: white;
     }
