Fix the layout of designed inner pages

--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -1074,3 +1074,12 @@ body.page-node-done
         }
     }
 }
+body.culture,
+body.services,
+body.work
+{
+    #block-system-main
+    {
+        display: none;
+    }
+}
