Fix team styles so the bios will fit

--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -229,7 +229,7 @@
         left: 0;
         top: 100%;
         right: 0;
-        height: 440px;
+        height: 480px;
         padding: 20px;
         font-size: 16px;
         background-repeat: no-repeat;
@@ -245,7 +245,7 @@
             
             & > div
             {
-                max-width: 35%;
+                max-width: 330px;
                 margin: 0 0 0 auto;
             }
         }
@@ -266,7 +266,7 @@
         {
             font-size: 2em;
             height: auto;
-            padding-top: 50px;
+            padding-top: 35px;
             line-height: 1.2;
         }
         .title
