--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -37,6 +37,34 @@ hr
     margin-bottom:0.75em;
 }
 
+.button
+{
+    text-decoration: none;
+    display: block;
+    color: $green;
+    width: 194px;
+    height: 45px;
+    line-height: 45px;
+    border: 3px solid $green;
+    cursor: pointer;
+    background: white;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    font-weight: bold;
+    box-sizing: content-box;
+    
+    &:hover
+    {
+        color: white;
+        background: $green;
+    }
+    &:active
+    {
+        color: $green;
+        background: white;
+    }
+}
+
 #page-wrapper
 {
     overflow: hidden;
@@ -1040,7 +1068,6 @@ body.work.node-type-page
     #block-system-main
     {
         max-width: 700px;
-        padding: 0 30px 30px 30px;
         margin: 0 auto;
         
         h2
@@ -1049,7 +1076,7 @@ body.work.node-type-page
             font-size: 2.4em;
             text-align: center;
             line-height: 1;
-            padding: 25px 0;
+            padding-bottom: 25px;
         }
         
         p
@@ -1075,8 +1102,7 @@ body.page-node-done
     }
 }
 body.culture,
-body.services,
-body.work
+body.services
 {
     #block-system-main
     {
