--- a/sites/all/themes/cci/sass/_typography.scss
+++ b/sites/all/themes/cci/sass/_typography.scss
@@ -2,5 +2,6 @@ body
 {
     font-family:"futura-pt", sans-serif;
     -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing: grayscale;
     font-weight:400;
 }
