--- a/sites/all/themes/cci/sass/_responsive.scss
+++ b/sites/all/themes/cci/sass/_responsive.scss
@@ -46,3 +46,19 @@
         padding-top: 50px;
     }
 }
+
+@media screen and (min-width:1200px)
+{
+    .view-work-samples
+    {
+        .title
+        {
+            font-size: 2.8em;
+            padding-top: 0.25em;
+        }
+        .description
+        {
+            font-size: 1.1em;
+        }
+    }
+}
