--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -1,4 +1,3 @@
-
 .view-culture-information-headings
 {
     position: relative;
@@ -466,6 +465,7 @@
         bottom: 0;
         text-align: center;
         text-decoration: none;
+        background: $green;
         background: rgba(16,98,50, 0.6);
         padding: 10%;
     }
