Move the menu button left a bit
close #2

--- a/sites/all/themes/cci/sass/_main.scss
+++ b/sites/all/themes/cci/sass/_main.scss
@@ -141,6 +141,7 @@ body.menu-green
         outline: none;
         height: 51px;
         line-height: 51px;
+        margin: 5px 5px 0 0;
         
         &:active
         {
