More space between how-we-do-it icons for iPad portrait
close #9

--- a/sites/all/themes/cci/sass/_responsive.scss
+++ b/sites/all/themes/cci/sass/_responsive.scss
@@ -18,6 +18,11 @@
     @import "responsive-768";
 }
 
+@media screen and (max-width:760px)
+{
+    @import "responsive-760";
+}
+
 @media screen and (max-width:640px)
 {
     @import "responsive-640";
