Centre good times logo for mobile
close #12

--- a/sites/all/themes/cci/sass/_responsive-640.scss
+++ b/sites/all/themes/cci/sass/_responsive-640.scss
@@ -135,3 +135,14 @@
         }
     }
 }
+
+#bottom1 .good-times
+{
+    &:before,
+    &:after
+    {
+        right: auto;
+        left: 50%;
+        margin-left: -62px;
+    }
+}
