Rearrange the order of the last 2 text/image sections for projects pages in mobile
close #10

--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -532,7 +532,7 @@
     .views-field-field-text-section-2
     {
         width: 50%;
-        float: left;
+        float: right;
         font-size: 1.1em;
         
         & > div
@@ -544,7 +544,7 @@
     {
         width: 43%;
         margin-right: 7%;
-        float: left;
+        float: right;
         
         & > div
         {
