--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -555,4 +555,65 @@
     {
         padding-top: 30px;
     }
+    
+    li.brand,
+    li.web,
+    li.design,
+    li.social,
+    li.promo,
+    li.mobile,
+    li.a11y,
+    li.interface,
+    li.campaign,
+    li.event,
+    {
+        list-style: none;
+        line-height: 52px;
+        padding-left: 60px;
+        margin-left: -20px;
+        margin-bottom: 4px;
+        background-repeat: no-repeat;
+        background-position: left center;
+        font-weight: bold;
+    }
+    li.brand
+    {
+        background-image: url(../images/icon-services-brand-green.svg);
+    }
+    li.web
+    {
+        background-image: url(../images/icon-services-web-green.svg);
+    }
+    li.design
+    {
+        background-image: url(../images/icon-services-design-green.svg);
+    }
+    li.social
+    {
+        background-image: url(../images/icon-services-social-green.svg);
+    }
+    li.promo
+    {
+        background-image: url(../images/icon-services-promo-green.svg);
+    }
+    li.mobile
+    {
+        background-image: url(../images/icon-services-mobile-green.svg);
+    }
+    li.a11y
+    {
+        background-image: url(../images/icon-services-a11y-green.svg);
+    }
+    li.interface
+    {
+        background-image: url(../images/icon-services-interface-green.svg);
+    }
+    li.campaign
+    {
+        background-image: url(../images/icon-services-campaign-green.svg);
+    }
+    li.event
+    {
+        background-image: url(../images/icon-services-event-green.svg);
+    }
 }
