Event icon for IE8 and spacing the services

--- a/sites/all/themes/cci/sass/_ie8.scss
+++ b/sites/all/themes/cci/sass/_ie8.scss
@@ -214,3 +214,47 @@ body.services .block.home-what-we-do .content
         background-image: url(../images/icon-png/icon-services-campaign-green.png);
     }
 }
+
+.view-project
+{
+    li.brand
+    {
+        background-image: url(../images/icon-png/icon-services-brand-green.png);
+    }
+    li.web
+    {
+        background-image: url(../images/icon-png/icon-services-web-green.png);
+    }
+    li.design
+    {
+        background-image: url(../images/icon-png/icon-services-design-green.png);
+    }
+    li.social
+    {
+        background-image: url(../images/icon-png/icon-services-social-green.png);
+    }
+    li.promo
+    {
+        background-image: url(../images/icon-png/icon-services-promo-green.png);
+    }
+    li.mobile
+    {
+        background-image: url(../images/icon-png/icon-services-mobile-green.png);
+    }
+    li.a11y
+    {
+        background-image: url(../images/icon-png/icon-services-a11y-green.png);
+    }
+    li.interface
+    {
+        background-image: url(../images/icon-png/icon-services-interface-green.png);
+    }
+    li.campaign
+    {
+        background-image: url(../images/icon-png/icon-services-campaign-green.png);
+    }
+    li.event
+    {
+        background-image: url(../images/icon-png/icon-services-event-green.png);
+    }
+}
