--- a/sites/all/themes/cci/sass/_views.scss
+++ b/sites/all/themes/cci/sass/_views.scss
@@ -556,6 +556,10 @@
         padding-top: 30px;
     }
     
+    .services
+    {
+        margin-bottom: 10px;
+    }
     li.brand,
     li.web,
     li.design,
