Hide the page title on front page

--- a/sites/all/themes/cci/sass/_front.scss
+++ b/sites/all/themes/cci/sass/_front.scss
@@ -3,7 +3,7 @@
     #block-system-main,
     #page-title
     {
-        display: none;
+        display: none !important;
     }
     .block.home-header
     {
